@@ -8,7 +8,7 @@
     <property name="version-major"     value="3"/>
     <property name="version-minor"     value="4"/>
     <property name="version-revision"  value="0"/>
-    <property name="version-status"    value="-RC-2"/>
+    <property name="version-status"    value="-RC-3"/>
     <property name="version"
   	            value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
 
