@@ -8,7 +8,7 @@
   <artifactId>joseki</artifactId>
   <packaging>jar</packaging>
   <name>Joseki</name>
-  <version>3.4.0-RC-2</version>
+  <version>3.4.0-RC-3</version>
   <description/>
   <url>http://joseki.org/</url>
 
